# voice-gate

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TROUBLESHOOTING.md  docker-compose.yml
.claude/rules/: api-design.md  audio-io.md  auth.md  cross-platform.md  ddd.md  docker.md  frontend.md  gui.md  migrations.md  ml-inference.md  module-boundaries.md  planning.md  rust-backend.md  rust-desktop.md  testing.md
.github/workflows/: ci.yml
.memory/: cursor.json  state.json
assets/: enrollment_passages.txt
backend/: .env.example  CLAUDE.md  Cargo.toml
backend/.memory/: cursor.json  state.json
backend/migrations/: 001_create_users.sql
backend/src/: main.rs
backend/src/common/errors/: mod.rs
backend/src/config/: mod.rs
backend/src/domains/health/presentation/routes/: mod.rs
backend/src/domains/users/domain/entities/: mod.rs
backend/src/domains/users/domain/repositories/: mod.rs
backend/src/domains/users/infrastructure/repositories/: mod.rs
backend/src/domains/users/presentation/routes/: mod.rs
backend/src/middleware/: auth.rs
deploy/: Dockerfile  myapp.service  voice-gate.service
docs/voicegate/: PHASE-1-VERIFICATION.md  PHASE-2-VERIFICATION.md  PHASE-3-VERIFICATION.md  frontend-summary.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  research.md  roadmap.md  status.md  voicegate-prd.md
frontend/: orval.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: axios-instance.ts
frontend/src/routes/: __root.tsx  index.tsx  users.tsx
packaging/linux/: voicegate.desktop
scripts/: download_fixtures.sh  download_models.py  download_models.sh  export_ecapa.py  package-appimage.sh  package-deb.sh  setup_pipewire.sh
src/: app_controller.rs  lib.rs  main.rs
src/audio/: audio_server.rs  capture.rs  mod.rs  output.rs  resampler.rs  ring_buffer.rs  virtual_mic.rs
src/config/: mod.rs  settings.rs
src/enrollment/: anti_target.rs  enroll.rs  mod.rs  profile.rs
src/gate/: audio_gate.rs  mod.rs
src/gui/: app.rs  enrollment_wizard.rs  mod.rs
src/ml/: embedding.rs  fbank.rs  mod.rs  similarity.rs  stft.rs  tse.rs  vad.rs
src/pipeline/: processor.rs
tests/: test_enrollment.rs  test_gate.rs  test_ml.rs  test_ort_smoke.rs  test_pipeline.rs
training/: README.md  TRAIN_ON_GPU.md  dataset.py  export_tse.py  mix_audio.py  model.py  requirements.txt  train.py
