[package]
name = "voicegate"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Real-time speaker isolation for Discord (cross-platform Rust desktop)"
license = "MIT"

[[bin]]
name = "voicegate"
path = "src/main.rs"

[dependencies]
# Audio I/O
cpal = "0.15"
rubato = "0.14"
ringbuf = "0.4"

# ML inference (unused in Phase 1; pinned now to avoid churn in Phase 2).
# ort 2.x is still in release-candidate territory on crates.io -- pin the
# exact RC here rather than the floating "2" requirement, which does not
# match any prerelease. Revisit when ort 2.0.0 stable ships.
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"] }
ndarray = "0.15"

# GUI (unused in Phase 1; pinned now for Phase 5)
eframe = "0.28"
egui = "0.28"

# Audio file I/O (fixture WAVs, Phase 2+)
hound = "3.5"

# Config + CLI
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Error / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform paths + executable lookup
dirs = "5"
which = "6"
ctrlc = "3.5.2"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.8", optional = true }

[features]
default = []
pipewire-native = ["pipewire"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
